-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.3
-
-
0053d80e0 (dev), a46ea51c8 (6.7), ef4b1ab6e (6.6), 325adaaea (tqtc/lts-6.5), a5ad80ef7 (dev), 4f9f5e8e8 (6.7), 8dfa774df (6.6), 30a391853 (tqtc/lts-6.5)
OS: MacOS Sonoma 14.3, MacOS Ventura 13.6.3
Qt continues to occupy the microphone unless you call QMediaCaptureSession::setAudioInput() with a null pointer after recording is complete. At the same time, I see a microphone usage indicator.
I am attaching the code to reproduce it and also a screen recording.
Please, use *.mp4 urls for showing video in your browser.