Media capture session - protect against recursive call

When setting audio input/output for the second time we can end up as nullptr
for input/output device, because of recursive call to setAudioInput/Output with nullptr
from disconnect callback function of our previous input/output. Also, avoid emitting
changed signal twice.

Pick-to: 6.7 6.6 6.5
Task-number: QTBUG-122053
Change-Id: Ie47363591a2dc60868a391ccbc3229bd2ff235de
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>